CVS code -
- General:
	- More minor comment cleanups. (DLR)
	- Convert more ints used as boolean values to use TRUE and
	  FALSE. (David Benbennick and DLR)
	- Change more instances of ints that can never be negative to
	  size_t's. (DLR)
	- Convert the shortcut list functions and most related functions
	  to return void instead of int, as the return values of all 
	  those functions are essentially unused.  Changes to
	  sc_init_one(), shortcut_init(), etc. (David Benbennick and
	  DLR)
- files.c:
  close_open_file()
	- Tweak to no longer rely on the return values of
	  open_(prev|next)file(). (DLR)
- global.c:
  shortcut_init()
	- Fix erroneous #ifdef so that nano compiles with
	  --disable-justify again. (DLR; found by Mike Frysinger)
- nano.c:
  do_exit()
	- Tweak for efficiency. (David Benbennick)
- proto.h:
	- Change the last variables in the prototypes for do_justify()
	  and get_mouseinput() to match the ones used in the actual
	  functions. (DLR)
- rcfile.c:
  parse_rcfile()
	- Have whitespace display default to off instead of on. (Mike
	  Frysinger)
- winio.c:
  get_control_kbinput()
	- Fix erroneous debugging statement so that nano compiles with
	  --enable-debug again. (Jon Oberheide)
  nanogetstr()
	- Tweak the code to update the edit window just before getting
	  statusbar input for efficiency, and update bottomwin just
	  before then too. (David Benbennick)

GNU nano 1.3.3 - 2004.06.28
- General:
	- Minor comment cleanups. (DLR)
	- Convert more ints used as boolean values to use TRUE and
	  FALSE. (David Benbennick)
	- Make sure the special control keys are handled the same way
	  after the window is resized or we come out of suspend mode.
	  Changes to do_cont() and handle_sigwinch(). (DLR)
	- Change some instances of ints that can never be negative to
	  size_t's. (DLR)
	- Add better explanations for and in the "Terminal breakage"
	  comments, and handle missing key #ifdefs inside the functions
	  that use those keys. (DLR)